// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`oin: array > deep-processes nested arrays and objects 1`] = `
[
  {
    "a": [
      {
        "b": 10,
      },
    ],
  },
  [
    {
      "c": 20,
    },
  ],
]
`;

exports[`oin: array > deep-processes object array items 1`] = `
[
  {
    "n": 10,
  },
  {
    "n": 2,
  },
]
`;

exports[`oin: array > handles empty array 1`] = `[]`;

exports[`oin: array > handles primitive array 1`] = `
[
  1,
  "a",
  true,
  null,
  undefined,
]
`;

exports[`oin: array > handles sparse arrays 1`] = `
[
  1,
  undefined,
  3,
]
`;

exports[`oin: object > handles deep nested objects 1`] = `
{
  "a": {
    "b": {
      "c": 2,
    },
  },
}
`;

exports[`oin: object > handles flat objects 1`] = `
{
  "a": 1,
  "b": "x",
}
`;

exports[`oin: object > handles object with array property 1`] = `
{
  "list": [
    {
      "n": 2,
    },
  ],
}
`;

exports[`oin: primitive > handles boolean 1`] = `true`;

exports[`oin: primitive > handles null 1`] = `null`;

exports[`oin: primitive > handles number 1`] = `1`;

exports[`oin: primitive > handles string 1`] = `"a"`;

exports[`oin: primitive > handles symbol 1`] = `"Symbol(oin-test)"`;

exports[`oin: primitive > handles undefined 1`] = `undefined`;
